# birdDetector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mic.c  mic.h
main/: main .c
micro_model/: .gitignore  CMakeLists.txt  model_data.cc  model_data2.cc  model_int.cc  sdkconfig  sdkconfig.old
micro_model/main/: CMakeLists.txt  input.cc  input.h  main.cc  main_functions.cc  main_functions.h  model.cc  model.h  utils.h
python_model/: modelo_bemtevi.ipynb
snd/: CMakeLists.txt  common.c  common.h  config.h  spectrogram.c  spectrum.c  spectrum.h  window.c  window.h
utilities/: converter.py  scrapper.py
